syntax = "proto3";
package svc;
option go_package = "parrot/proto/svc";

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
}

message GetAllUsersRequest {
}

message GetAllUsersResponse {
    repeated string user_ids = 1;
}

service User {
    rpc Get(GetUserRequest) returns (GetUserResponse) {};
    rpc GetAll(GetAllUsersRequest) returns (GetAllUsersResponse) {};
}